--- a/dashlord.yml
+++ b/dashlord.yml
@@ -21,9 +21,5 @@ tools:
   declaration-a11y: true
   ecoindex: true
 urls:
-  - url: https://www.fabrique.social.gouv.fr
-    repositories:
-      - socialgouv/www
-    docker:
-      - ghcr.io/socialgouv/fabrique/frontend
+  - url: https://www.reflexqvt.anact.fr
   - url: https://anact.fr
