--- a/dashlord.yml
+++ b/dashlord.yml
@@ -4,22 +4,22 @@ entity: Ministères sociaux
 footer: Powered by SocialGouv
 marianne: false
 tools:
-  404: true
-  screenshot: true
-  nmap: true
-  zap: true
+  404: false
+  screenshot: false
+  nmap: false
+  zap: false
   wappalyzer: true
-  http: true
-  testssl: true
-  lighthouse: true
-  thirdparties: true
-  nuclei: true
+  http: false
+  testssl: false
+  lighthouse: false
+  thirdparties: false
+  nuclei: false
   updownio: false
-  dependabot: true
-  codescan: true
+  dependabot: false
+  codescan: false
   stats: false
-  declaration-a11y: true
-  ecoindex: true
+  declaration-a11y: false
+  ecoindex: false
 urls:
-  - url: https://www.reflexqvt.anact.fr
   - url: https://anact.fr
+title: Site de l'Anact
